Crex/tests/type_declarations/intersection_types/invalid_types/invalid_nullable_type.crxt
--TEST--
Intersection type cannot be nullable
--FILE--
<?crx

function foo(): ?Countable&Iterator {}

?>
--EXPECTF--
Parse error: syntax error, unexpected token "&", expecting "{" in %s on line %d
